discussion/kv_engine/161818/161818_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Don't rely on allocator for estimating mem-release at expel

At expel we need to compute an estimate of the memory released.
There are many ways of doing that, but in our case all is conditioned
by the fact that we need to use a O(1) call to CheckpointQueue::splice
for extracting items from CheckpointQueue::toWrite.
This is how it currently works:

1. We acquire the CM::queueLock and we instantiate a
   CheckpointQueue(toWrite.get_allocator()) 'expelledItems' container.
   Ie, we store expelled items in a container that uses the same
   allocator as Checkpoint::toWrite
2. The toWrite->expelledItems splice opearation performed in
   Checkpoint::expelItems() doesn't perform any actual
   deallocation/allocation on toWrite/expelledItems
3. The caller of Checkpoint::expelItems() gets 'expelledItems' and
   copies it into a CheckpointQueue() 'dest'. Note that this
   destination container uses its own allocator, which computes the
   actual memory usage of the original 'expelledItems'. That is what
   allows us to make a dest.get_allocator().gteBytesAllocated() call
   for computing the exact mem-overedead released by expel.
4. Also, in step (3) the original 'expelledItems' container goes
   out-of-scope and deallocations are accounted in the 'toWrite'
   allocator. That is how we correctly update the 'toWrite' mem-usage

The important point in the description above is that at step (3) we
need to perform a O(N = toWrite-size) copy for computing the
mem-overhead released by expel. That copy is performed under
CM::queueLock and must be avoided.

As collateral (but not completely irrelevant) point, note that the copy
that we want to remove is O(N) in both time and space, so avoiding the
copy would also decrease the mem-utilization spike at expel.

This patch removes the needs of relying on that copy for computing the
mem-overhead deallocation. This is a pre-requirement for then avoiding
the copy in a follow-up patch.

Note: Currently the call to splice(range) isn't really O(1) as
CheckpointQueue is a std::list that provides only a O(N) splice(range)
API. We'll get to a real O(1) splice in a dedicated follow-up patch.

Change-Id: I84e1b813061fd8e55e94c110a84ee8e2be883d30

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-22 04:15:57.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-22 04:23:08.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34238/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34238/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40221/ : FAILURE

Compile error at ..\kv_engine\logger\logger_benchmark.cc(27): error C3867: "benchmark::State::thread_index": non-standard syntax; use "&" to create a pointer to member ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40221/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12679/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:13:10: error: "gmock/gmock-generated-matchers.h" file not found [clang-diagnostic-error]
#include <gmock/gmock-generated-matchers.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12679/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:13:10:
error: "gmock/gmock-generated-matchers.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2318/ : FAILURE

Compile error at [2021-09-22T04:20:37.256Z] tlm/deps/googletest.exploded/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13436/ : FAILURE

Compile error at [2021-09-22T04:21:34.459Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:35:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15054/ : FAILURE

Compile error at [2021-09-22T04:20:26.106Z] ../kv_engine/logger/logger_benchmark.cc:27:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15054/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14547/ : FAILURE

Compile error at [2021-09-22T04:20:19.688Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22560/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14294/ : FAILURE

Compile error at [2021-09-22T04:19:24.204Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2350/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2350/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11470/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
